--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@web3-react/walletconnect-connector": "^6.2.13",
     "ethereum-multicall": "^2.10.0",
     "ethers": "^5.6.0",
+    "graphql": "^16.3.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "urql": "^2.2.0",
     "web-vitals": "^2.1.0",
     "web3": "1.2.11"
   },
